--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,104 @@
 /* styles.css */
 
-html, body {
-    box-sizing: border-box;
-    margin: 0;
-    text-align: center;
-    background: transparent;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    overflow-x: hidden;
-  }
-  
-  header {
-    background-color: transparent;
-    width: 100%;
-  }
-.hero h1{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    letter-spacing: 1.5;
-    font-size: 80px;
-    color: #28fc03;
-    margin: 0;
-    
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  text-align: center;
+  background: #f2f2f2;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  overflow-x: hidden;
 }
-h3, h2.section-header, h2{
-  font-family: 'Roboto', sans-serif;
+
+header {
+  background-color: transparent;
+  width: 100%;
+}
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  letter-spacing: 1.5;
+  font-size: 60px;
+  color: #000;
+  margin-top: 100px;
+}
+h3,
+h2.section-header,
+h2 {
+  font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 700;
 }
 
-
-
-hr{
+hr {
   width: 80%;
   justify-content: center;
   margin-top: 7%;
-
 }
 
+.navbar {
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-left: 2%;
+  border-bottom: 1px ridge;
+  height: 100px;
+}
 
+.nav-link {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  color: #333;
+  font-size: 20px;
+  list-style: none;
+  line-height: 2;
+  text-decoration: none;
+  transition: 0.7s ease;
+}
 
+.hamburger {
+  display: none;
+}
 
+.bar {
+  display: block;
+  width: 30px;
+  height: 3px;
+  border: 1px #28fc03 solid;
+  border-radius: 5px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
 
-  .navbar{
-    background-color: white;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-left: 2%;
-    border-bottom: 1px ridge;
-    height: 100px;
-    
-    
-  
-    
-  }
+nav ul li {
+  display: inline-block;
+  margin: 10px;
+  position: relative;
+  left: 30%;
+  list-style: none;
+}
+nav ul li:hover {
+  transform: scale(1.1);
+  color: aquamarine;
+}
 
- .nav-link {
- 
-    font-family: "Ubuntu", sans-serif;
-    font-weight: bold;
-    color: #28fc03;
-    font-size: 20px;
-    list-style: none;
-    line-height: 2;
-    text-decoration: none;
-    transition: 0.7s ease;
-  }
+.navlink-active {
+  padding: 3px;
+  border: 2px solid #000;
+  background-color: azure;
+}
 
-  .hamburger{
-    display: none;
-    
-
-  }
-
-  .bar{
-    display: block;
-    width: 30px;
-    height: 3px;
-    border: 1px #28fc03 solid;
-    border-radius: 5px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out; 
-   }
-   
-  
-
-  nav ul li {
-    display: inline-block;
-    margin: 10px;
-    position: relative;
-    left:30% ;
-    list-style: none;
-  }
-  nav ul li:hover{
-    transform: scale(1.1);
-    color: aquamarine;
-  }
-
-  .navlink-active{
-    padding: 3px;
-    border: 2px solid #000;
-    background-color: azure;
-    
-  }
-
-  .name-container{
-    
-    position: absolute;
-    top: 30px;
-    left: 10%;
-  }
-.brand-name{
+.name-container {
+  position: absolute;
+  top: 30px;
+  left: 10%;
+}
+.brand-name {
   font-family: "Ubuntu", serif;
   font-weight: bold;
   font-size: 1.3rem;
@@ -126,18 +110,16 @@ hr{
 
 /* Logo Section */
 
-.car-hire{
-  
+.car-hire {
   text-transform: capitalize;
 }
-.name-logo{
+.name-logo {
   height: 20px;
   width: 20px;
   margin-right: 5px;
 }
 
-.head-line{
-
+.head-line {
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: bold;
@@ -147,62 +129,59 @@ hr{
   text-transform: capitalize;
 }
 
-
-
-.social-icon{
+.social-icon {
   color: black;
   margin: 20px;
 }
-.social-icon:hover{
+.social-icon:hover {
   color: aqua;
   transform: scale(1.2);
 }
-  
-.contact-me{
+
+.contact-me {
   margin: 0 15px 20px;
 }
-  footer {
-    padding: 20px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* Cars Page CSS Styles */
+footer {
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+}
 
+/* Cars Page CSS Styles */
 
-  
- #cars{
+#cars {
   padding-top: 7%;
   margin-top: 100px;
- }
-  .grid-container {
-    padding-top: 3%;
-    display: inline-block;
-    justify-content: center;
-    flex-direction: row;
-    
-  }
-  
-  .grid-item {
-    display: inline-block;
-    padding: 10px;
-    box-sizing: border-box;
-    text-align: center;
-  }
-  
-  .grid-item img {
-    width: 300px;
-    object-fit: cover;
-    border-radius: 8px;
-  }
-  
-  .grid-item h3, .grid-item p, .grid-item h4 {
-    margin: 5px 0;
-  }
+}
+.grid-container {
+  padding-top: 3%;
+  display: inline-block;
+  justify-content: center;
+  flex-direction: row;
+}
 
-  /* Contact Us Page Styles */
+.grid-item {
+  display: inline-block;
+  padding: 10px;
+  box-sizing: border-box;
+  text-align: center;
+}
 
-.contact-us-main{
+.grid-item img {
+  width: 300px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.grid-item h3,
+.grid-item p,
+.grid-item h4 {
+  margin: 5px 0;
+}
+
+/* Contact Us Page Styles */
+
+.contact-us-main {
   margin-top: 7%;
 }
 
@@ -211,7 +190,6 @@ hr{
   margin: 0 auto;
   padding: 20px;
 }
-
 
 .contact-label {
   display: block;
@@ -244,7 +222,6 @@ textarea {
   border-radius: 4px;
   cursor: pointer;
   float: right;
-  
 }
 
 .contact-button:hover {
@@ -255,53 +232,179 @@ textarea {
   margin-bottom: 20px;
 }
 
+/* Hero section styles */
+.hero {
+  /* background-image: url('big1.jpg');  */
 
+  background-color: rgba(0, 0, 0, 0.5);
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  padding: 10px 0;
+  transition: background-image 3s ease-in-out;
+  border-radius: 15px;
+  width: 90%;
+  margin-left: 5%;
+}
+.form-container {
+  width: 300px;
+  background-color: white;
+  height: 400px;
+  display: flex;
+  place-content: center;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
   
+  margin-left: 10px;
+}
+.hero input {
+  background-color: #f2f2f2;
+  display: inline-block;
+  border: none;
+  margin: 0;
+  width: 80%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+}
+.hero form {
+  margin: 20px;
+}
+.hero label {
+  display: inline-block;
+  margin-top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+
+.hero button {
+  margin: 20px;
+  padding: 10px 20px;
+  background-color: #28fc03;
+  color: #f2f2f2;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+
+/* Services Section */
 
 
-  
-  
+#services {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: 90%;
+  margin: 5% 0 10% 5%;
+  border-radius: 10px;
+}
 
- 
-  
+.services-heading{
+  width: 90%;
+  margin: 0 5% 0 10%;
+  display: flex;
+  text-align: center;
+}
+.services-heading h1{
+  color: #000;
+}
+.services-heading p{
+ font-family: 'Roboto', sans-serif;
+ font-weight: 300;
+ margin: 15% 0 0 10% ;
+ text-align: left;
+}
+
+.box {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  background-color: #ccc;
+  border-radius: 10px;
+}
+
+.box img {
+  width: 250px;
+  height: 250px;
+  margin-right: 20px;
+  border-radius: 10px;
+}
+
+.box h3,
+.box p {
+  margin: 0 0 5% 2% ;
+}
 
 
 
+/* Car listings styles */
+.car-listings {
+  margin: 40px auto;
+  text-align: center;
+  width: 90%;
+}
 
+.car-card {
+  display: inline-block;
+  width: 300px;
+  padding: 20px;
+  margin: 10px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+}
 
-  /* ...rest of your CSS code... */
+.car-card img {
+  width: 100%;
+  border-radius: 5px;
+}
 
-/* Responsive CSS */
-@media (max-width: 767px) {
- 
+.car-card h3 {
+  margin-top: 10px;
+  font-size: 20px;
+}
+
+.car-card p {
+  margin-top: 5px;
+}
+
+.car-card .btn {
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: #28fc03;
+  color: #333;
+  text-decoration: none;
+  border-radius: 3px;
+}
+
+@media (max-width: 768px) {
   
 }
 
-@media (max-width: 768px){
-  .nav-menu{
+@media (max-width: 768px) {
+  .nav-menu {
     display: none;
-    
   }
-  .hamburger{
+  .hamburger {
     display: block;
     position: fixed;
     right: 20px;
     top: 20px;
-   }
-  .hamburger.active .bar:nth-child(2){
+  }
+  .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
-  .hamburger.active .bar:nth-child(1){
+  .hamburger.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
-  .hamburger.active .bar:nth-child(3){
+  .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
-  .nav-menu.active{
+  .nav-menu.active {
     left: 0;
     margin: 0;
     position: fixed;
-    top: 0; 
+    top: 0;
     right: 110%;
     gap: 0;
     display: flex;
@@ -313,97 +416,19 @@ textarea {
     height: auto;
   }
 
-  .nav-item{
+  .nav-item {
     text-align: center;
     justify-content: center;
     display: block;
     margin-top: 16px;
     margin-right: auto;
   }
- 
-  .nav-link{
+
+  .nav-link {
     color: #000;
     text-align: center;
   }
-  .bar{
+  .bar {
     background-color: #28fc03;
-   
   }
 }
-
-
-/* styles.css for cars */
-
-
-
-/* Hero section styles */
-.hero {
-    /* background-image: url('big1.jpg');  */
-    margin-top: 93px;
-    background-color: rgba(0, 0, 0, 0.5);
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    padding: 200px 0;
-    transition: background-image 3s ease-in-out;
-    
-    
-}
-
-/* .hero h1 {
-    font-size: 36px;
-    color: #fff;
-} */
-
-
-
-
-
-.hero button {
-    padding: 10px 20px;
-    background-color: #28fc03;
-    color: #333;
-    border: none;
-    cursor: pointer;
-}
-
-/* Car listings styles */
-.car-listings {
-
-    margin: 40px auto;
-    text-align: center;
-}
-
-.car-card {
-    display: inline-block;
-    width: 300px;
-    padding: 20px;
-    margin: 10px;
-    background-color: #f2f2f2;
-    border-radius: 5px;
-}
-
-.car-card img {
-    width: 100%;
-    border-radius: 5px;
-}
-
-.car-card h3 {
-    margin-top: 10px;
-    font-size: 20px;
-}
-
-.car-card p {
-    margin-top: 5px;
-}
-
-.car-card .btn {
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: #28fc03;
-    color: #333;
-    text-decoration: none;
-    border-radius: 3px;
-}
-
-
