--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h1 {
   letter-spacing: 1.5;
   font-size: 60px;
   color: #000;
-  margin-top: 100px;
+  margin-top: 150px;
 }
 h3,
 h2.section-header,
@@ -292,32 +292,37 @@ textarea {
 
 
 #services {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* grid-template-columns: repeat(2, 1fr); */
   gap: 20px;
   width: 90%;
   margin: 5% 0 10% 5%;
   border-radius: 10px;
 }
 
-.services-heading{
+.services-heading, .why-us-heading{
   width: 90%;
-  margin: 0 5% 0 10%;
+  margin: 5% 5% 0 10%;
   display: flex;
+  justify-content: center;
   text-align: center;
+  gap: 50px;
 }
-.services-heading h1{
+.services-heading h1, .why-us-heading h1{
   color: #000;
+  margin: 0;
 }
-.services-heading p{
+.services-heading p, .why-us-heading p{
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
- margin: 15% 0 0 10% ;
+ margin: 0% 0 0 10% ;
  text-align: left;
 }
 
 .box {
-  text-align: center;
+  text-align: left;
   display: flex;
   align-items: center;
   background-color: #ccc;
@@ -327,7 +332,6 @@ textarea {
 .box img {
   width: 250px;
   height: 250px;
-  margin-right: 20px;
   border-radius: 10px;
 }
 
@@ -375,6 +379,33 @@ textarea {
   color: #333;
   text-decoration: none;
   border-radius: 3px;
+}
+
+/* Why Us section */
+#why-us{
+  width: 90%;
+  margin: 5% 0 10% 5%;
+  
+}
+
+.why-us-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
+.why-us-box{
+  background-color: #ccc;
+  width: fit-content;
+  border-radius: 10px;
+}
+
+ img.why-us-image{
+  margin: 0;
+  height: 200px;
+  width: auto;
+  border-radius: 10px;
+  color: #28fc03;
 }
 
 @media (max-width: 768px) {
